update enpoint & swagger for version config
