# backend/http/http.go
@@ -112,19 +112,21 @@ func NewHTTPHandler(endpoints endpoints.Endpoints,
 		).ServeHTTP)
 	})
 
-	r.Get("/list-config-version", httptransport.NewServer(
-		endpoints.ListVersion,
-		httptransport.NopRequestDecoder,
-		httptransport.EncodeJSONResponse,
-		options...,
-	).ServeHTTP)
+	r.Route("/config-versions", func(r chi.Router) {
+		r.Get("/", httptransport.NewServer(
+			endpoints.ListVersion,
+			httptransport.NopRequestDecoder,
+			httptransport.EncodeJSONResponse,
+			options...,
+		).ServeHTTP)
 
-	r.Post("/revert-config-version", httptransport.NewServer(
-		endpoints.RevertVersion,
-		decodeRevertVersion,
-		httptransport.EncodeJSONResponse,
-		options...,
-	).ServeHTTP)
+		r.Post("/revert", httptransport.NewServer(
+			endpoints.RevertVersion,
+			decodeRevertVersion,
+			httptransport.EncodeJSONResponse,
+			options...,
+		).ServeHTTP)
+	})
 
 	return r
 }
