# swaggerui/swagger.json
@@ -28,7 +28,15 @@
             "name": "CRUD",
             "description": "Operations about user",
             "externalDocs": {
-                "description": "Find out more about our store",
+                "description": "Find out more",
+                "url": "https://smithy.dwarves.foundation"
+            }
+        },
+        {
+            "name": "Config version",
+            "description": "Config version",
+            "externalDocs": {
+                "description": "Find out more",
                 "url": "https://smithy.dwarves.foundation"
             }
         }
@@ -72,9 +80,7 @@
         },
         "/databases/{database_name}/{table_name}/query": {
             "post": {
-                "tags": [
-                    "CRUD"
-                ],
+                "tags": ["CRUD"],
                 "summary": "Query row in databases",
                 "description": "",
                 "operationId": "query",
@@ -118,14 +124,80 @@
                 },
                 "security": [
                     {
-                        "api_key": []
+                        "jwt": []
+                    }
+                ]
+            }
+        },
+        "/config-versions": {
+            "get": {
+                "tags": ["Config version"],
+                "summary": "Get list of config's version",
+                "description": "",
+                "operationId": "list_config_version",
+                "produces": [
+                    "application/json"
+                ],
+                "responses": {
+                    "200": {
+                        "description": "successful operation",
+                        "schema": {
+                            "$ref": "#/definitions/ConfigVersion"
+                        }
+                    }
+                },
+                "security": [
+                    {
+                        "jwt": []
+                    }
+                ]
+            }
+        },
+        "/config-versions/revert": {
+            "post": {
+                "tags": ["Config version"],
+                "summary": "Revert the current config to a special version",
+                "description": "",
+                "operationId": "revert_config_version",
+                "produces": [
+                    "application/json"
+                ],
+                "parameters": [
+                    {
+                        "name": "body",
+                        "in": "body",
+                        "description": "Config's version to revert",
+                        "required": true,
+                        "schema": {
+                            "type": "object",
+                            "properties": {
+                                "version_id": {
+                                    "type": "integer",
+                                    "format": "int64",
+                                    "example": 1
+                                }
+                            }
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "successful operation",
+                        "schema": {
+                            "$ref": "#/definitions/ConfigVersion"
+                        }
+                    }
+                },
+                "security": [
+                    {
+                        "jwt": []
                     }
                 ]
             }
         }
     },
     "securityDefinitions": {
-        "api_key": {
+        "jwt": {
             "type": "apiKey",
             "in": "header",
             "name": "Authorization"
@@ -268,6 +340,27 @@
             },
             "xml": {
                 "name": "QueryResponse"
+            }
+        },
+        "ConfigVersion": {
+            "type": "object",
+            "properties": {
+                "id": {
+                    "type": "integer",
+                    "format": "int64",
+                    "example": 1
+                },
+                "checksum": {
+                    "type": "string",
+                    "example": "df22c3f966bd25b116899d9dfbc8558b"
+                },
+                "sync_at": {
+                    "type": "string",
+                    "example": "2018-09-12T15:15:14.288252406+07:00"
+                }
+            },
+            "xml": {
+                "name": "ConfigVersion"
             }
         }
     },
